--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -17,25 +17,10 @@
     "@microsoft/gulp-core-build": "3.8.18",
     "@microsoft/node-core-library": "3.0.1",
     "@types/gulp": "3.8.32",
-    "@types/node": "8.5.8",
-    "@types/vinyl": "1.2.30",
     "decomment": "~0.9.1",
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
     "gulp": "~3.9.1",
-    "gulp-cache": "~0.4.5",
-    "gulp-changed": "~1.3.2",
-    "gulp-decomment": "~0.2.0",
-    "gulp-plumber": "~1.1.0",
-    "gulp-sourcemaps": "~2.6.4",
-    "gulp-texttojs": "~1.0.3",
-    "gulp-typescript": "~3.1.6",
-    "gulp-util": "~3.0.7",
-    "lodash": "~4.17.5",
-    "md5": "~2.2.1",
-    "merge2": "~1.0.2",
-    "object-assign": "~4.1.0",
-    "through2": "~2.0.1",
     "tslint": "~5.9.1",
     "tslint-microsoft-contrib": "~5.2.1",
     "typescript": "~2.4.1"
@@ -43,10 +28,6 @@
   "devDependencies": {
     "@microsoft/rush-stack-compiler": "0.1.4",
     "@microsoft/node-library-build": "5.0.6",
-    "@types/glob": "5.0.30",
-    "@types/gulp-util": "3.0.30",
-    "@types/orchestrator": "0.0.30",
-    "@types/q": "0.0.32",
-    "@types/through2": "2.0.32"
+    "@types/glob": "5.0.30"
   }
 }
