--- a/apps/rush-lib/tsconfig.json
+++ b/apps/rush-lib/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "types": [
       "jest"
-    ]
+    ],
+    "skipLibCheck": true
   },
   "include": [
     "./typings/tsd.d.ts",
