--- a/libraries/load-themed-styles/.npmignore
+++ b/libraries/load-themed-styles/.npmignore
@@ -11,7 +11,7 @@
 
 # Ignore certain files in the above folder
 /dist/*.stats.*
-/lib/*/test/*
+/lib/**/test/*
 
 # NOTE: These don't need to be specified, because NPM includes them automatically.
 #
