--- a/stack/rush-stack/.npmignore
+++ b/stack/rush-stack/.npmignore
@@ -10,7 +10,7 @@
 
 # Ignore certain files in the above folder
 /dist/*.stats.*
-/lib/*/test/*
+/lib/**/test/*
 
 # NOTE: These don't need to be specified, because NPM includes them automatically.
 #
