--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -18,26 +18,19 @@
     "@types/node": "8.5.8",
     "@types/gulp": "3.8.32",
     "autoprefixer": "~9.1.3",
-    "gulp": "~3.9.1",
-    "gulp-clean-css": "~3.0.4",
-    "gulp-clip-empty-files": "~0.1.2",
-    "gulp-clone": "~1.0.0",
-    "gulp-postcss": "~8.0.0",
-    "gulp-sass": "~3.1.0",
-    "gulp-sourcemaps": "~2.6.4",
-    "gulp-texttojs": "~1.0.3",
-    "merge2": "~1.0.2",
     "postcss-modules": "~1.3.1",
-    "through2": "~2.0.1"
+    "glob": "~7.0.5",
+    "node-sass": "4.9.3",
+    "postcss": "7.0.5",
+    "clean-css": "4.2.1",
+    "@microsoft/node-core-library": "3.1.0"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler": "0.1.10",
     "@microsoft/node-library-build": "5.0.15",
-    "@types/gulp-util": "3.0.30",
-    "@types/mime": "0.0.29",
-    "@types/orchestrator": "0.0.30",
-    "@types/q": "0.0.32",
-    "@types/through2": "2.0.32",
-    "@types/vinyl": "1.2.30"
+    "@types/glob": "5.0.30",
+    "@types/node-sass": "3.10.32",
+    "@types/clean-css": "3.4.30",
+    "gulp": "~3.9.1"
   }
 }
