--- a/stack/rush-stack-compiler/package.json
+++ b/stack/rush-stack-compiler/package.json
@@ -13,12 +13,17 @@
     "rush-tslint": "./bin/rush-tslint"
   },
   "scripts": {
-    "build": ""
+    "build": "gulp --clean"
   },
   "dependencies": {
     "@microsoft/api-extractor": "6.0.2",
-    "tslint": "~5.9.1",
+    "@microsoft/node-core-library": "3.3.0",
+    "@types/node": "8.5.8",
     "tslint-microsoft-contrib": "~5.2.1",
+    "tslint": "~5.9.1",
     "typescript": "~2.4.1"
+  },
+  "devDependencies": {
+    "@microsoft/node-library-build": "5.0.18"
   }
 }
