--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -37,7 +37,7 @@
     "gulp": "~3.9.1",
     "gulp-flatten": "~0.2.0",
     "gulp-if": "^2.0.1",
-    "gulp-util": "~3.0.7",
+    "vinyl":"~2.2.0",
     "jju": "~1.3.0",
     "lodash.merge": "~4.3.2",
     "merge2": "~1.0.2",
