--- a/apps/rush-lib/package.json
+++ b/apps/rush-lib/package.json
@@ -34,7 +34,8 @@
     "glob": "~7.0.5",
     "glob-escape": "~0.0.1",
     "https-proxy-agent": "~2.2.1",
-    "inquirer": "~1.2.1",
+    "@types/inquirer": "0.0.43",
+    "inquirer": "~6.2.0",
     "js-yaml": "~3.9.1",
     "jju": "~1.3.0",
     "lodash": "~4.17.5",
