--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -271,10 +271,6 @@
       "allowedCategories": [ "libraries" ]
     },
     {
-      "name": "gulp-util",
-      "allowedCategories": [ "libraries" ]
-    },
-    {
       "name": "https-proxy-agent",
       "allowedCategories": [ "libraries" ]
     },
@@ -476,6 +472,10 @@
     },
     {
       "name": "uglify-js",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
+      "name": "vinyl",
       "allowedCategories": [ "libraries" ]
     },
     {
