--- a/libraries/node-core-library/package.json
+++ b/libraries/node-core-library/package.json
@@ -20,7 +20,8 @@
     "@types/z-schema": "3.16.31",
     "fs-extra": "~5.0.0",
     "jju": "~1.3.0",
-    "z-schema": "~3.18.3"
+    "z-schema": "~3.18.3",
+    "colors": "~1.2.1"
   },
   "devDependencies": {
     "tslint-microsoft-contrib": "~5.2.1",
