--- a/stack/rush-stack-compiler/package.json
+++ b/stack/rush-stack-compiler/package.json
@@ -24,6 +24,7 @@
     "typescript": "~2.4.1"
   },
   "devDependencies": {
-    "@microsoft/node-library-build": "5.0.16"
+    "@microsoft/node-library-build": "5.0.16",
+    "gulp": "~3.9.1"
   }
 }
