Plumbing RSC through GCB-TS.

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -423,6 +423,10 @@
       "allowedCategories": [ "libraries" ]
     },
     {
+      "name": "resolve",
+      "allowedCategories": [ "libraries" ]
+    },
+    {
       "name": "rimraf",
       "allowedCategories": [ "libraries" ]
     },
