--- a/stack/rush-stack-compiler/package.json
+++ b/stack/rush-stack-compiler/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "build": "gulp --clean"
   },
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "@microsoft/api-extractor": "6.0.9",
     "@microsoft/node-core-library": "3.5.0",
