--- a/stack/rush-stack-compiler/tsconfig.json
+++ b/stack/rush-stack-compiler/tsconfig.json
@@ -2,16 +2,7 @@
   "extends": "./includes/tsconfig-node.json",
 
   "compilerOptions": {
-    "outDir": "lib",
-
-    "forceConsistentCasingInFileNames": true,
-    "jsx": "react",
-    "declaration": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "experimentalDecorators": true,
-    "strictNullChecks": true,
-    "types": []
+    "outDir": "lib"
   },
   "include": [
     "src/**/*.ts",
