--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -22,6 +22,7 @@
     "resolve": "~1.8.1"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "6.0.9",
     "@microsoft/rush-stack-compiler": "0.1.20",
     "@microsoft/node-library-build": "5.0.16",
     "@types/glob": "5.0.30",
