--- a/stack/rush-stack-compiler/package.json
+++ b/stack/rush-stack-compiler/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "6.0.0",
+    "@microsoft/rush-stack-compiler": "0.2.0",
     "gulp": "~3.9.1"
   }
 }
