--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -18,7 +18,8 @@
     "@types/node": "8.5.8",
     "decomment": "~0.9.1",
     "glob": "~7.0.5",
-    "glob-escape": "~0.0.1"
+    "glob-escape": "~0.0.1",
+    "resolve": "1.8.1"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "6.0.9",
@@ -26,6 +27,7 @@
     "@microsoft/node-library-build": "6.0.2",
     "@types/glob": "5.0.30",
     "gulp": "~3.9.1",
-    "typescript": "~3.0.3"
+    "typescript": "~3.0.3",
+    "@types/resolve": "0.0.8"
   }
 }
