--- a/apps/api-documenter/package.json
+++ b/apps/api-documenter/package.json
@@ -19,6 +19,7 @@
     "@microsoft/api-extractor": "6.1.1",
     "@microsoft/node-core-library": "3.5.0",
     "@microsoft/ts-command-line": "4.2.2",
+    "@microsoft/tsdoc": "0.9.3",
     "colors": "~1.2.1",
     "js-yaml": "~3.9.1"
   },
