--- a/stack/rush-stack-compiler/includes/tsconfig-base.json
+++ b/stack/rush-stack-compiler/includes/tsconfig-base.json
@@ -11,6 +11,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
+    "noUnusedLocals": true,
     "types": []
   },
   "include": [
