--- a/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/systemevent.yml
+++ b/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/systemevent.yml
@@ -3,7 +3,7 @@ items:
   - uid: api-extractor-test-05.SystemEvent
     summary: A class used to exposed events.
     name: SystemEvent
-    fullName: api-extractor-test-05.SystemEvent
+    fullName: SystemEvent
     langs:
       - typeScript
     type: class
@@ -13,7 +13,7 @@ items:
   - uid: api-extractor-test-05.SystemEvent.addHandler
     summary: Adds an handler for the event.
     name: addHandler(handler)
-    fullName: api-extractor-test-05.SystemEvent.addHandler
+    fullName: addHandler
     langs:
       - typeScript
     type: method
