--- a/core-build/gulp-core-build/package.json
+++ b/core-build/gulp-core-build/package.json
@@ -54,7 +54,7 @@
     "jsdom": "~11.11.0"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0",
+    "@microsoft/rush-stack-compiler": "0.5.2",
     "@types/z-schema": "3.16.31",
     "@microsoft/node-library-build": "6.0.6",
     "chai": "~3.5.0"
