Moving some packages to nonbrowser-approved-packages.

--- a/common/config/rush/nonbrowser-approved-packages.json
+++ b/common/config/rush/nonbrowser-approved-packages.json
@@ -71,6 +71,10 @@
       "allowedCategories": [ "libraries", "tests" ]
     },
     {
+      "name": "@microsoft/rush-stack-compiler-3.0",
+      "allowedCategories": [ "libraries", "tests" ]
+    },
+    {
       "name": "@microsoft/set-webpack-public-path-plugin",
       "allowedCategories": [ "libraries" ]
     },
