--- a/core-build/gulp-core-build-sass/package.json
+++ b/core-build/gulp-core-build-sass/package.json
@@ -26,7 +26,7 @@
     "@microsoft/node-core-library": "3.5.2"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0",
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0",
     "@microsoft/node-library-build": "6.0.10",
     "@types/glob": "5.0.30",
     "@types/node-sass": "3.10.32",
