--- a/core-build/gulp-core-build-webpack/package.json
+++ b/core-build/gulp-core-build-webpack/package.json
@@ -21,7 +21,7 @@
     "webpack": "~3.11.0"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0",
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0",
     "@microsoft/node-library-build": "6.0.10",
     "@types/orchestrator": "0.0.30",
     "@types/q": "0.0.32",
