--- a/core-build/node-library-build/package.json
+++ b/core-build/node-library-build/package.json
@@ -21,6 +21,6 @@
     "gulp": "~3.9.1"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0"
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0"
   }
 }
