--- a/core-build/web-library-build/package.json
+++ b/core-build/web-library-build/package.json
@@ -28,6 +28,6 @@
   },
   "devDependencies": {
     "@microsoft/node-library-build": "6.0.10",
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0"
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0"
   }
 }
