--- a/stack/rush-stack/package.json
+++ b/stack/rush-stack/package.json
@@ -30,7 +30,7 @@
     "colors": "~1.2.1"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0",
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0",
     "@microsoft/node-library-build": "6.0.10",
     "@types/node": "8.5.8",
     "gulp": "~3.9.1"
