--- a/webpack/loader-load-themed-styles/package.json
+++ b/webpack/loader-load-themed-styles/package.json
@@ -17,7 +17,7 @@
     "@microsoft/load-themed-styles": "1.8.37"
   },
   "devDependencies": {
-    "@microsoft/rush-stack-compiler-3.0": "~0.1.0",
+    "@microsoft/rush-stack-compiler-3.0": "0.0.0",
     "@types/mocha": "5.2.5",
     "@types/node": "8.5.8",
     "@types/loader-utils": "1.1.3",
