--- a/core-build/gulp-core-build-typescript/package.json
+++ b/core-build/gulp-core-build-typescript/package.json
@@ -13,7 +13,7 @@
     "build": "gulp --clean"
   },
   "dependencies": {
-    "@microsoft/rush-stack-compiler": "0.5.3",
+    "@microsoft/rush-stack-compiler": "~0.3.0",
     "@microsoft/gulp-core-build": "3.8.46",
     "@microsoft/node-core-library": "3.5.2",
     "@types/node": "8.5.8",
@@ -28,7 +28,7 @@
     "@microsoft/node-library-build": "6.0.6",
     "@types/glob": "5.0.30",
     "gulp": "~3.9.1",
-    "typescript": "~2.4.2",
+    "typescript": "~2.7.2",
     "@types/resolve": "0.0.8"
   }
 }
