--- a/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
+++ b/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
@@ -11,6 +11,7 @@ items:
     package: api-extractor-test-05
     children:
       - api-extractor-test-05.DocClass1.exampleFunction
+      - api-extractor-test-05.DocClass1.exampleFunction_1
       - api-extractor-test-05.DocClass1.interestingEdgeCases
       - api-extractor-test-05.DocClass1.malformedEvent
       - api-extractor-test-05.DocClass1.modifiedEvent
@@ -38,11 +39,29 @@ items:
           description: the second string
           type:
             - string
+  - uid: api-extractor-test-05.DocClass1.exampleFunction_1
+    summary: This is also an overloaded function.
+    name: exampleFunction(x)
+    fullName: api-extractor-test-05.DocClass1.exampleFunction_1
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'exampleFunction(x: number): number;'
+      return:
+        type:
+          - number
+        description: ''
+      parameters:
+        - id: x
+          description: the number
+          type:
+            - number
   - uid: api-extractor-test-05.DocClass1.interestingEdgeCases
     summary: |-
-      Example: "{ \\"maxItemsToShow\\": 123 }"
+      Example: "<!-- -->{ \\<!-- -->"maxItemsToShow<!-- -->\\<!-- -->": 123 }<!-- -->"
 
-      The regular expression used to validate the constraints is /^\[a-zA-Z0-9\\-\_\]+$/
+      The regular expression used to validate the constraints is /^\[a-zA-Z0-9<!-- -->\\<!-- -->-\_\]+$/
     name: interestingEdgeCases()
     fullName: api-extractor-test-05.DocClass1.interestingEdgeCases
     langs:
@@ -65,7 +84,7 @@ items:
       content: 'malformedEvent: SystemEvent;'
       return:
         type:
-          - SystemEvent
+          - api-extractor-test-05.SystemEvent
   - uid: api-extractor-test-05.DocClass1.modifiedEvent
     summary: This event is fired whenever the object is modified.
     name: modifiedEvent
@@ -77,7 +96,7 @@ items:
       content: 'readonly modifiedEvent: SystemEvent;'
       return:
         type:
-          - SystemEvent
+          - api-extractor-test-05.SystemEvent
   - uid: api-extractor-test-05.DocClass1.regularProperty
     summary: This is a regular property that happens to use the SystemEvent type.
     name: regularProperty
@@ -89,7 +108,7 @@ items:
       content: 'regularProperty: SystemEvent;'
       return:
         type:
-          - SystemEvent
+          - api-extractor-test-05.SystemEvent
   - uid: api-extractor-test-05.DocClass1.tableExample
     summary: 'An example with tables:'
     remarks: <table> <tr> <td>John</td> <td>Doe</td> </tr> </table>
