--- a/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
+++ b/build-tests/api-extractor-test-05/etc/yaml/api-extractor-test-05/docclass1.yml
@@ -16,6 +16,7 @@ items:
       - api-extractor-test-05.DocClass1.malformedEvent
       - api-extractor-test-05.DocClass1.modifiedEvent
       - api-extractor-test-05.DocClass1.regularProperty
+      - api-extractor-test-05.DocClass1.sumWithExample
       - api-extractor-test-05.DocClass1.tableExample
   - uid: api-extractor-test-05.DocClass1.exampleFunction
     summary: This is an overloaded function.
@@ -109,6 +110,29 @@ items:
       return:
         type:
           - api-extractor-test-05.SystemEvent
+  - uid: api-extractor-test-05.DocClass1.sumWithExample
+    summary: Returns the sum of two numbers.
+    remarks: This illustrates usage of the `@example` block tag.
+    name: 'sumWithExample(x, y)'
+    fullName: api-extractor-test-05.DocClass1.sumWithExample
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'static sumWithExample(x: number, y: number): number;'
+      return:
+        type:
+          - number
+        description: the sum of the two numbers
+      parameters:
+        - id: x
+          description: the first number to add
+          type:
+            - number
+        - id: 'y'
+          description: the second number to add
+          type:
+            - number
   - uid: api-extractor-test-05.DocClass1.tableExample
     summary: 'An example with tables:'
     remarks: <table> <tr> <td>John</td> <td>Doe</td> </tr> </table>
